k8s/productivity/grist/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
  namespace: productivity
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      containers:
        - name: grist
          image: gristlabs/grist:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
          livenessProbe:
            httpGet:
              path: /status
              port: 8484
          readinessProbe:
            httpGet:
              path: /status
              port: 8484
            initialDelaySeconds: 20
          startupProbe:
            httpGet:
              path: /
              port: 8484
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - containerPort: 8484
              name: http
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
