k8s/productivity/grist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grist
  namespace: productivity
spec:
  selector:
    app: grist
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8484
      name: http
