k8s/productivity/grist/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist
  namespace: productivity
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grist
            port:
              number: 8484
